--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <title>Sean Anderson Portfolio</title>
+    <link rel="stylesheet" href="styles/styles.css" />
+</head>
+<body>
+
+<div class="navbar">
+    <nav id="navigation-scrolling">
+        <ul>
+            <li><a href="#home-screen">Home</a></li>
+            <li><a href="#exp-screen">Experience</a></li>
+            <li><a href="#interests-screen">Interests</a></li>
+            <!-- <li><a href="#projects-screen">Projects</a></li> -->
+        </ul>
+    </nav>
+    </div><!-- navbar -->
+
+    <div class="navbar-icons">
+    <a href="https://www.linkedin.com/in/seananderson92/" target="_blank"><img id ="linkedin" src="img/linkedin.png" alt="linkedin-link"></a>
+    <a href="https://www.seek.com.au/profile/sean-anderson-Tr33gfDwZF" target="_blank"><img id ="seek" src="img/seek.png" alt="seek-link"></a>
+    <a href="mailto:seananderson10@hotmail.co.uk"><img id ="email" src="img/email.png" alt="email-link"></a>
+    </div><!-- navbar-icons" -->
+
+<div class="content" id="home-screen">
+    <div id="left-column">
+        <h1>Sean Anderson</h1>
+        <h2>Software Developer</h2>
+        <h3>BSc Web Design & Development</h3>
+        <div id="summary">
+          <div class="shadow-box">
+            <p>A resourceful and practical Professional Designer driven to personally achieve while helping my team to succeed. Abertay University Graduate with Professional Software Development Experience working in Local Government for multiple years.</p>
+          </div>
+        </div>
+    </div>
+    <div id="right-column">
+        <img src="img/portrait.png" alt="Portrait of Sean Anderson">
+    </div>
+</div>
+
+<div class="content" id="exp-screen">
+    <h1 id="screen-title">Experience</h1>
+    
+</div><!-- exp-screen -->
+
+<div class="content" id="interests-screen">
+    <h1 id="screen-title">Interests</h1>
+   
+</div><!-- interests-screen -->
+
+<!-- <div class="content" id="projects-screen">
+    <h1 id="screen-title">Projects</h1>
+   
+</div>--><!-- projects-screen currently commented out until projects are added--> 
+<script src="scripts/scroll.js"></script>
+</body>
+</html>
