added pistons fansite

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="#home-screen">Home</a></li>
             <li><a href="#exp-screen">Experience</a></li>
             <li><a href="#interests-screen">Interests</a></li>
-            <!-- <li><a href="#projects-screen">Projects</a></li> -->
+            <li><a href="#projects-screen">Projects</a></li>
         </ul>
     </nav>
     </div><!-- navbar -->
@@ -51,10 +51,12 @@
    
 </div><!-- interests-screen -->
 
-<!-- <div class="content" id="projects-screen">
+<div class="content" id="projects-screen">
     <h1 id="screen-title">Projects</h1>
+    <h2><a href="https://www.github.com/supergoldenman.github.io/pistons-fansite" target="blank" alt="pistons-fansite">Pistons Fansite</a></h2>
+    <a href="https://www.github.com/supergoldenman.github.io/pistons-fansite" target="blank"></a>
    
-</div>--><!-- projects-screen currently commented out until projects are added--> 
+</div><!-- projects-screen currently commented out until projects are added--> 
 <script src="scripts/scroll.js"></script>
 </body>
 </html>
