--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <div class="content" id="projects-screen">
     <h1 id="screen-title">Projects</h1>
-    <h2><a href="https://supergoldenman.github.io/pistons-fansite/pistons-fansite" target="blank" alt="pistons-fansite">Pistons Fansite</a></h2>
+    <h2><a href="https://supergoldenman.github.io/pistons-fansite" target="blank" alt="pistons-fansite">Pistons Fansite</a></h2>
    
 </div><!-- projects-screen currently commented out until projects are added--> 
 <script src="scripts/scroll.js"></script>
