Changed css3 to Tailwind css
deleted styles folder, changed some images and edited the skills cards as well

--- a/index.html
+++ b/index.html
@@ -4,57 +4,137 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>Sean Anderson Portfolio</title>
-    <link rel="stylesheet" href="styles/styles.css" />
+    <!-- Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="font-sans box-border pt-12 overflow-hidden">
 
-<div class="navbar">
-    <nav id="navigation-scrolling">
-        <ul>
-            <li><a href="#home-screen">Home</a></li>
-            <li><a href="#exp-screen">Experience</a></li>
-            <li><a href="#interests-screen">Interests</a></li>
-            <!-- <li><a href="#projects-screen">Projects</a></li> -->
+<!-- Navbar -->
+<div class="fixed top-0 w-full h-[12vh] bg-gray-800 flex items-center justify-center z-50 shadow-md">
+    <nav id="navigation-scrolling" class="flex justify-center">
+        <ul class="flex list-none">
+            <li><a class="text-white text-base px-4 hover:text-gray-400" href="#home-screen">Home</a></li>
+            <li><a class="text-white text-base px-4 hover:text-gray-400" href="#skills-screen">Skills</a></li>
+            <li><a class="text-white text-base px-4 hover:text-gray-400" href="#interests-screen">Interests</a></li>
         </ul>
     </nav>
-    </div><!-- navbar -->
+</div>
 
-    <div class="navbar-icons">
-    <a href="https://www.linkedin.com/in/seananderson92/" target="_blank"><img id ="linkedin" src="img/linkedin.png" alt="linkedin-link"></a>
-    <a href="https://www.seek.com.au/profile/sean-anderson-Tr33gfDwZF" target="_blank"><img id ="seek" src="img/seek.png" alt="seek-link"></a>
-    <a href="mailto:seananderson10@hotmail.co.uk"><img id ="email" src="img/email.png" alt="email-link"></a>
-    </div><!-- navbar-icons" -->
+<!-- Navbar Icons -->
+<div class="fixed top-0 right-5 h-[12vh] flex items-center gap-2 z-50">
+    <a href="https://www.linkedin.com/in/seananderson92/" target="_blank">
+        <img class="w-10 h-10 rounded-full hover:scale-110 transition-transform" src="img/linkedin.png" alt="linkedin-link">
+    </a>
+    <a href="https://www.seek.com.au/profile/sean-anderson-Tr33gfDwZF" target="_blank">
+        <img class="w-10 h-10 rounded-full hover:scale-110 transition-transform" src="img/seek.png" alt="seek-link">
+    </a>
+    <a href="mailto:seananderson10@hotmail.co.uk">
+        <img class="w-10 h-10 rounded-full hover:scale-110 transition-transform" src="img/email.png" alt="email-link">
+    </a>
+</div>
 
-<div class="content" id="home-screen">
-    <div id="left-column">
-        <h1>Sean Anderson</h1>
-        <h2>Software Developer</h2>
-        <h3>BSc Web Design & Development</h3>
-        <div id="summary">
-          <div class="shadow-box">
-            <p>A resourceful and practical Professional Designer driven to personally achieve while helping my team to succeed. Abertay University Graduate with Professional Software Development Experience working in Local Government for multiple years.</p>
-          </div>
+<!-- Home Screen -->
+<div id="home-screen" class="min-h-[calc(100vh-12vh)] flex items-center justify-center p-5 mt-[12vh] scroll-mt-[12vh]">
+    <div id="left-column" class="w-[40%] flex flex-col justify-center items-center text-center">
+        <h1 class="text-2xl font-bold mb-2">Sean Anderson</h1>
+        <h2 class="font-light text-xl">Software Developer</h2>
+        <h3 class="italic font-light text-lg my-2">BSc Web Design & Development</h3>
+        <div id="summary" class="flex justify-center">
+            <div class="shadow-md rounded-lg p-5 bg-white my-5">
+                <p>A resourceful and practical Professional Designer driven to personally achieve while helping my team to succeed. Abertay University Graduate with Professional Software Development Experience working in Local Government for multiple years.</p>
+            </div>
         </div>
     </div>
-    <div id="right-column">
-        <img src="img/portrait.png" alt="Portrait of Sean Anderson">
+    <div id="right-column" class="w-[45%] flex flex-col justify-center items-center">
+        <img class="rounded-full mt-5" src="img/portrait.png" alt="Portrait of Sean Anderson">
     </div>
 </div>
 
-<div class="content" id="exp-screen">
-    <h1 id="screen-title">Experience</h1>
-    
-</div><!-- exp-screen -->
 
-<div class="content" id="interests-screen">
-    <h1 id="screen-title">Interests</h1>
-   
-</div><!-- interests-screen -->
+<!-- Skills Screen -->
+<!-- Skills Screen -->
+<div class="min-h-[calc(100vh-12vh)] flex flex-col items-center px-10 py-5 scroll-mt-[12vh]" id="skills-screen">
+    <h1 id="screen-title" class="text-center text-3xl font-bold mb-10">Skills</h1>
 
-<!-- <div class="content" id="projects-screen">
+    <div id="skill-cards" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 w-full max-w-6xl">
+        <!-- Skill Card -->
+        <div class="relative w-full h-[350px] cursor-pointer rounded-lg shadow-md hover:shadow-xl transition-transform bg-white overflow-hidden" onclick="flipCard(this)">
+            <div class="front absolute inset-0 flex flex-col justify-center items-center">
+                <h2 class="absolute top-4 left-0 right-0 text-xl font-bold text-center text-white bg-black bg-opacity-50 py-2">Front-End Development</h2>
+                <img class="w-full h-full object-cover" src="img/front-end.jpeg" alt="Front-End Development">
+            </div>
+            <div class="back absolute inset-0 hidden flex flex-col justify-center items-center bg-white">
+                <ul class="list-disc text-center">
+                    <li>HTML5</li>
+                    <li>CSS3</li>
+                    <li>JavaScript</li>
+                    <li>jQuery</li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Skill Card -->
+        <div class="relative w-full h-[350px] cursor-pointer rounded-lg shadow-md hover:shadow-xl transition-transform bg-white overflow-hidden" onclick="flipCard(this)">
+            <div class="front absolute inset-0 flex flex-col justify-center items-center">
+                <h2 class="absolute top-4 left-0 right-0 text-xl font-bold text-center text-white bg-black bg-opacity-50 py-2">Back-End Development</h2>
+                <img class="w-full h-full object-cover" src="img/back-end.jpeg" alt="Back-End Development">
+            </div>
+            <div class="back absolute inset-0 hidden flex flex-col justify-center items-center bg-white">
+                <ul class="list-disc text-center">
+                    <li>PHP</li>
+                    <li>Linux</li>
+                    <li>SQL</li>
+                    <li>Python</li>
+                    <li>Git</li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Skill Card -->
+        <div class="relative w-full h-[350px] cursor-pointer rounded-lg shadow-md hover:shadow-xl transition-transform bg-white overflow-hidden" onclick="flipCard(this)">
+            <div class="front absolute inset-0 flex flex-col justify-center items-center">
+                <h2 class="absolute top-4 left-0 right-0 text-xl font-bold text-center text-white bg-black bg-opacity-50 py-2">Customer Service</h2>
+                <img class="w-full h-full object-cover" src="img/customer-service.jpeg" alt="Customer Service">
+            </div>
+            <div class="back absolute inset-0 hidden flex flex-col justify-center items-center bg-white">
+                <ul class="list-disc text-center">
+                    <li>Decade Experience</li>
+                    <li>Communication</li>
+                    <li>Clarity</li>
+                    <li>Kindness</li>
+                    <li>Patience</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+<!-- Interests Screen -->
+<div class="min-h-[calc(100vh-12vh)] flex flex-col items-center p-5 scroll-mt-[12vh]" id="interests-screen">
+    <h1 id="screen-title" class="text-center text-2xl font-bold mb-5">Interests</h1>
+</div>
+
+<!-- Projects Screen (currently commented) -->
+<!--
+<div class="content" id="projects-screen">
     <h1 id="screen-title">Projects</h1>
-   
-</div>--><!-- projects-screen currently commented out until projects are added--> 
+</div>
+-->
+
 <script src="scripts/scroll.js"></script>
+<script>
+    function flipCard(card) {
+    const front = card.querySelector('.front');
+    const back = card.querySelector('.back');
+
+    // Toggle visibility without affecting card height
+    front.classList.toggle('hidden');
+    back.classList.toggle('hidden');
+}
+
+</script>
 </body>
 </html>
