--- a/index.html
+++ b/index.html
@@ -110,7 +110,21 @@
 <!-- List of Projects -->
     <ul class="group/list mt-5">
         <li class="mb-12">
-            <div class="group relative grid gap-4 pb-1 pl-10 lg:pl-0 transition-all sm:grid-cols-8 sm:gap-8 md:gap-4 lg:hover:!opacity-100 lg:group-hover/list:opacity-50">
+            <!-- Mobile Projects -->
+             <div class="lg:hidden">
+                <h3 class="text-center text-2xl font-bold pb-2">My Detroit Pistons Fansite</h3>
+                <ul class="flex justify-center pb-2" aria-label="Technologies used:">
+                    <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">HTML5</div></li>
+                    <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">CSS3</div></li>
+                    <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">NBA API</div></li>
+                    <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Python</div></li>                    
+                </ul>
+                <a href="https://supergoldenman.github.io/pistons-fansite/" target="_blank" rel="noreferrer noopener" aria-label="pistons-fansite">
+                    <img alt="Detroit Pistons Preview" loading="lazy" w-full class="object-cover" style="color:transparent" src="img/pistons-preview.jpg">
+                    </a>
+            </div><!-- End of Mobile P's -->
+            <!-- Desktop Projects -->
+            <div class="hidden lg:flex group relative grid gap-4 pb-1 pl-10 lg:pl-0 transition-all sm:grid-cols-8 sm:gap-8 md:gap-4 lg:hover:!opacity-100 lg:group-hover/list:opacity-50">
                 <div class="absolute -inset-x-4 -inset-y-4 z-0 hidden rounded-md transition motion-reduce:transition-none lg:-inset-x-6 lg:block lg:group-hover:bg-black lg:group-hover:shadow-[inset_0_1px_0_0_rgba(148,163,184,0.1)] lg:group-hover:drop-shadow-lg">
                 </div>
                 <div class="z-10 sm:order-2 sm:col-span-6">
@@ -127,10 +141,11 @@
                         <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">HTML5</div></li>
                         <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">CSS3</div></li>
                         <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">NBA API</div></li>
-                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Python</div></li>                    </ul>
+                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Python</div></li>                    
+                    </ul>
                 </div>
                 <img alt="Detroit Pistons Preview" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="aspect-video object-cover rounded border-2 border-slate-200/10 transition group-hover:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1" style="color:transparent" src="img/pistons-preview.jpg">
-            </div>
+            </div><!-- End of Desktop P's -->
         </li>
 <!-- ADD AS WE CREATE   -->
         <!-- <li class="mb-12">
