--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Python</div></li>                    
                     </ul>
                 </div>
-                <img alt="Detroit Pistons Preview" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="aspect-video object-cover rounded border-2 border-slate-200/10 transition group-hover:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1" style="color:transparent" src="img/pistons-preview.jpg">
+                <img alt="Detroit Pistons Preview" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="aspect-video object-cover rounded border-2 border-slate-200/10 transition sm:order-1 sm:col-span-2 sm:translate-y-1 group-hover:border-teal-700" style="color:transparent" src="img/pistons-preview.jpg">
             </div><!-- End of Desktop P's -->
         </li>
 
@@ -181,7 +181,7 @@
                         <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">CSS3</div></li>                    
                     </ul>
                 </div>
-                <img alt="To Do List App Preview" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="aspect-video object-cover rounded border-2 border-slate-200/10 transition group-hover:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1" style="color:transparent" src="img/todolist.jpg">
+                <img alt="To Do List App Preview" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="aspect-video object-cover rounded border-2 border-slate-200/10 transition sm:order-1 sm:col-span-2 sm:translate-y-1 group-hover:border-teal-700" style="color:transparent" src="img/todolist.jpg">
             </div><!-- End of Desktop P's -->
         </li>
         <!-- ADD AS WE CREATE   -->
