--- a/index.html
+++ b/index.html
@@ -203,13 +203,13 @@
                 </div>
                 <div class="z-10 sm:order-2 sm:col-span-6">
                     <h3>
-                        <a class="inline-flex items-baseline text-3xl text-black hover:text-teal-300 focus-visible:text-teal-300  group/link text-base" href="https://github.com/SuperGoldenMan/asteroids/" target="_blank" rel="noreferrer noopener" aria-label="asteroids">
+                        <a class="inline-flex items-baseline text-3xl text-black hover:text-teal-300 focus-visible:text-teal-300  group/link text-base" href="https://supergoldenman.github.io/asteroids/build/web/index.html" target="_blank" rel="noreferrer noopener" aria-label="asteroids">
                             <span class="absolute -inset-x-4 -inset-y-2.5 hidden rounded md:-inset-x-6 md:-inset-y-4 lg:block"></span>
                             <span>Asteroids<!-- --> <span class="inline-block">Game<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="inline-block h-4 w-4 shrink-0 transition-transform group-hover/link:-translate-y-1 group-hover/link:translate-x-1 group-focus-visible/link:-translate-y-1 group-focus-visible/link:translate-x-1 motion-reduce:transition-none ml-1 translate-y-px" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path></svg></span></span>
                         </a> 
                     </h3>
                     <p class="hidden lg:flex mt-2 text-sm leading-normal group-hover:text-white">
-                        Personal project creating the classic Asteroids in Pygame. Can be downloaded, requires local Python3 and Pygame to run.
+                        Personal project creating the classic Asteroids in Pygame. Can be played through this link or downloaded from my github, requires Python3 and Pygame to run if downloaded locally.
                     </p>
                     <ul class="mt-2 flex flex-wrap" aria-label="Technologies used:">
                         <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Python</div></li>
