added new project

--- a/index.html
+++ b/index.html
@@ -149,41 +149,6 @@
             </div><!-- End of Desktop P's -->
         </li>
 
-        <!-- React TodoList -->
-        <li class="mb-12">
-            <!-- Mobile Projects -->
-             <div class="lg:hidden">
-                <h3 class="text-center text-2xl font-bold pb-2">React To Do List App</h3>
-                <ul class="flex justify-center pb-2" aria-label="Technologies used:">
-                    <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">React</div></li>
-                    <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">CSS</div></li>                   
-                </ul>
-                <a href="https://github.com/SuperGoldenMan/todolist/" target="_blank" rel="noreferrer noopener" aria-label="todolist">
-                    <img alt="To Do List App Preview" loading="lazy" w-full class="object-cover" style="color:transparent" src="img/todolist.jpg">
-                    </a>
-            </div><!-- End of Mobile P's -->
-            <!-- Desktop Projects -->
-            <div class="hidden lg:flex group relative grid gap-4 pb-1 pl-10 lg:pl-0 transition-all sm:grid-cols-8 sm:gap-8 md:gap-4 lg:hover:!opacity-100 lg:group-hover/list:opacity-50">
-                <div class="absolute -inset-x-4 -inset-y-4 z-0 hidden rounded-md transition motion-reduce:transition-none lg:-inset-x-6 lg:block lg:group-hover:bg-black lg:group-hover:shadow-[inset_0_1px_0_0_rgba(148,163,184,0.1)] lg:group-hover:drop-shadow-lg">
-                </div>
-                <div class="z-10 sm:order-2 sm:col-span-6">
-                    <h3>
-                        <a class="inline-flex items-baseline text-3xl text-black hover:text-teal-300 focus-visible:text-teal-300  group/link text-base" href="https://github.com/SuperGoldenMan/todolist/" target="_blank" rel="noreferrer noopener" aria-label="todolist">
-                            <span class="absolute -inset-x-4 -inset-y-2.5 hidden rounded md:-inset-x-6 md:-inset-y-4 lg:block"></span>
-                            <span>To Do List<!-- --> <span class="inline-block">App<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="inline-block h-4 w-4 shrink-0 transition-transform group-hover/link:-translate-y-1 group-hover/link:translate-x-1 group-focus-visible/link:-translate-y-1 group-focus-visible/link:translate-x-1 motion-reduce:transition-none ml-1 translate-y-px" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path></svg></span></span>
-                        </a> 
-                    </h3>
-                    <p class="hidden lg:flex mt-2 text-sm leading-normal group-hover:text-white">
-                        Personal project to create a To Do List App using React.
-                    </p>
-                    <ul class="mt-2 flex flex-wrap" aria-label="Technologies used:">
-                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">React</div></li>
-                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">CSS3</div></li>                    
-                    </ul>
-                </div>
-                <img alt="To Do List App Preview" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="aspect-video object-cover rounded border-2 border-slate-200/10 transition sm:order-1 sm:col-span-2 sm:translate-y-1 group-hover:border-teal-700" style="color:transparent" src="img/todolist.jpg">
-            </div><!-- End of Desktop P's -->
-        </li>
         <!-- PyGame Asteroids -->
         <li class="mb-12">
             <!-- Mobile Projects -->
@@ -219,6 +184,81 @@
                 <img alt="Asteroids Game Preview" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="aspect-video object-cover rounded border-2 border-slate-200/10 transition sm:order-1 sm:col-span-2 sm:translate-y-1 group-hover:border-teal-700" style="color:transparent" src="img/asteroids.png">
             </div><!-- End of Desktop P's -->
         </li>
+
+        <!-- Artist Folio-->
+        <li class="mb-12">
+            <!-- Mobile Projects -->
+             <div class="lg:hidden">
+                <h3 class="text-center text-2xl font-bold pb-2">Artist Portfolio</h3>
+                <ul class="flex justify-center pb-2" aria-label="Technologies used:">
+                    <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">HTML5</div></li>
+                    <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">CSS3</div></li>
+                    <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">JavaScript</div></li>                  
+                </ul>
+                <a href="https://supergoldenman.github.io/rachael-smith/" target="_blank" rel="noreferrer noopener" aria-label="artist-folio">
+                    <img alt="Artist Folio Preview" loading="lazy" w-full class="object-cover" style="color:transparent" src="img/artist-preview.jpg.jpg">
+                    </a>
+            </div><!-- End of Mobile P's -->
+            <!-- Desktop Projects -->
+            <div class="hidden lg:flex group relative grid gap-4 pb-1 pl-10 lg:pl-0 transition-all sm:grid-cols-8 sm:gap-8 md:gap-4 lg:hover:!opacity-100 lg:group-hover/list:opacity-50">
+                <div class="absolute -inset-x-4 -inset-y-4 z-0 hidden rounded-md transition motion-reduce:transition-none lg:-inset-x-6 lg:block lg:group-hover:bg-black lg:group-hover:shadow-[inset_0_1px_0_0_rgba(148,163,184,0.1)] lg:group-hover:drop-shadow-lg">
+                </div>
+                <div class="z-10 sm:order-2 sm:col-span-6">
+                    <h3>
+                        <a class="inline-flex items-baseline text-3xl text-black hover:text-teal-300 focus-visible:text-teal-300  group/link text-base" href="https://supergoldenman.github.io/pistons-fansite/" target="_blank" rel="noreferrer noopener" aria-label="pistons-fansite">
+                            <span class="absolute -inset-x-4 -inset-y-2.5 hidden rounded md:-inset-x-6 md:-inset-y-4 lg:block"></span>
+                            <span>Artist<!-- --> <span class="inline-block">Portfolio<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="inline-block h-4 w-4 shrink-0 transition-transform group-hover/link:-translate-y-1 group-hover/link:translate-x-1 group-focus-visible/link:-translate-y-1 group-focus-visible/link:translate-x-1 motion-reduce:transition-none ml-1 translate-y-px" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path></svg></span></span>
+                        </a> 
+                    </h3>
+                    <p class="hidden lg:flex mt-2 text-sm leading-normal group-hover:text-white">
+                        Portfolio website for an artist showing artwork and travel sketches written from scratch in HTML, CSS, and JavaScript. Updates to come.
+                    </p>
+                    <ul class="mt-2 flex flex-wrap" aria-label="Technologies used:">
+                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">HTML5</div></li>
+                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">CSS3</div></li>
+                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">JavaScript</div></li>                   
+                    </ul>
+                </div>
+                <img alt="Artist Folio Preview" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="aspect-video object-cover rounded border-2 border-slate-200/10 transition sm:order-1 sm:col-span-2 sm:translate-y-1 group-hover:border-teal-700" style="color:transparent" src="img/artist-preview.jpg.jpg">
+            </div><!-- End of Desktop P's -->
+        </li>
+
+        <!-- React TodoList -->
+        <li class="mb-12">
+            <!-- Mobile Projects -->
+             <div class="lg:hidden">
+                <h3 class="text-center text-2xl font-bold pb-2">React To Do List App</h3>
+                <ul class="flex justify-center pb-2" aria-label="Technologies used:">
+                    <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">React</div></li>
+                    <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">CSS</div></li>                   
+                </ul>
+                <a href="https://github.com/SuperGoldenMan/todolist/" target="_blank" rel="noreferrer noopener" aria-label="todolist">
+                    <img alt="To Do List App Preview" loading="lazy" w-full class="object-cover" style="color:transparent" src="img/todolist.jpg">
+                    </a>
+            </div><!-- End of Mobile P's -->
+            <!-- Desktop Projects -->
+            <div class="hidden lg:flex group relative grid gap-4 pb-1 pl-10 lg:pl-0 transition-all sm:grid-cols-8 sm:gap-8 md:gap-4 lg:hover:!opacity-100 lg:group-hover/list:opacity-50">
+                <div class="absolute -inset-x-4 -inset-y-4 z-0 hidden rounded-md transition motion-reduce:transition-none lg:-inset-x-6 lg:block lg:group-hover:bg-black lg:group-hover:shadow-[inset_0_1px_0_0_rgba(148,163,184,0.1)] lg:group-hover:drop-shadow-lg">
+                </div>
+                <div class="z-10 sm:order-2 sm:col-span-6">
+                    <h3>
+                        <a class="inline-flex items-baseline text-3xl text-black hover:text-teal-300 focus-visible:text-teal-300  group/link text-base" href="https://github.com/SuperGoldenMan/todolist/" target="_blank" rel="noreferrer noopener" aria-label="todolist">
+                            <span class="absolute -inset-x-4 -inset-y-2.5 hidden rounded md:-inset-x-6 md:-inset-y-4 lg:block"></span>
+                            <span>To Do List<!-- --> <span class="inline-block">App<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="inline-block h-4 w-4 shrink-0 transition-transform group-hover/link:-translate-y-1 group-hover/link:translate-x-1 group-focus-visible/link:-translate-y-1 group-focus-visible/link:translate-x-1 motion-reduce:transition-none ml-1 translate-y-px" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path></svg></span></span>
+                        </a> 
+                    </h3>
+                    <p class="hidden lg:flex mt-2 text-sm leading-normal group-hover:text-white">
+                        Personal project to create a To Do List App using React.
+                    </p>
+                    <ul class="mt-2 flex flex-wrap" aria-label="Technologies used:">
+                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">React</div></li>
+                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">CSS3</div></li>                    
+                    </ul>
+                </div>
+                <img alt="To Do List App Preview" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="aspect-video object-cover rounded border-2 border-slate-200/10 transition sm:order-1 sm:col-span-2 sm:translate-y-1 group-hover:border-teal-700" style="color:transparent" src="img/todolist.jpg">
+            </div><!-- End of Desktop P's -->
+        </li>
+        
         <!-- ADD AS WE CREATE   -->
     </ul>
 </div><!-- Projects -->
