quick fix for links

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">JavaScript</div></li>                  
                 </ul>
                 <a href="https://supergoldenman.github.io/rachael-smith/" target="_blank" rel="noreferrer noopener" aria-label="artist-folio">
-                    <img alt="Artist Folio Preview" loading="lazy" w-full class="object-cover" style="color:transparent" src="img/artist-preview.jpg.jpg">
+                    <img alt="Artist Folio Preview" loading="lazy" w-full class="object-cover" style="color:transparent" src="img/artist-preview.jpg">
                     </a>
             </div><!-- End of Mobile P's -->
             <!-- Desktop Projects -->
@@ -219,7 +219,7 @@
                         <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">JavaScript</div></li>                   
                     </ul>
                 </div>
-                <img alt="Artist Folio Preview" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="aspect-video object-cover rounded border-2 border-slate-200/10 transition sm:order-1 sm:col-span-2 sm:translate-y-1 group-hover:border-teal-700" style="color:transparent" src="img/artist-preview.jpg.jpg">
+                <img alt="Artist Folio Preview" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="aspect-video object-cover rounded border-2 border-slate-200/10 transition sm:order-1 sm:col-span-2 sm:translate-y-1 group-hover:border-teal-700" style="color:transparent" src="img/artist-preview.jpg">
             </div><!-- End of Desktop P's -->
         </li>
 
