updated links to match

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
     <div class="flex flex-col md:flex-row items-center md:items-start w-full max-w-6xl gap-10">
         <!-- Left Side (Resume Image) -->
         <div class="hidden lg:flex relative w-full md:w-1/2 flex justify-center h-[600px]">
-            <a href="pdf/sean_anderson_cv.pdf" target="_blank" class="relative group">
+            <a href="pdf/sean-anderson-cv.pdf" target="_blank" class="relative group">
                 <img src="img/resume.jpg" alt="Resume" class="w-full h-full object-contain shadow-md rounded-lg shadow-teal-700">
                 <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 bg-black/50 transition-opacity">
                     <span class="text-white text-lg font-bold flex items-center gap-2">
