changed technologies used

--- a/index.html
+++ b/index.html
@@ -118,8 +118,9 @@
                 <ul class="flex justify-center pb-2" aria-label="Technologies used:">
                     <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">HTML5</div></li>
                     <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">CSS3</div></li>
+                    <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Javascript</div></li>
                     <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">NBA API</div></li>
-                    <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Python</div></li>                    
+                    <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Python</div></li> 
                 </ul>
                 <a href="https://supergoldenman.github.io/pistons-fansite/" target="_blank" rel="noreferrer noopener" aria-label="pistons-fansite">
                     <img alt="Detroit Pistons Preview" loading="lazy" w-full class="object-cover" style="color:transparent" src="img/pistons-preview.jpg">
@@ -142,6 +143,7 @@
                     <ul class="mt-2 flex flex-wrap" aria-label="Technologies used:">
                         <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">HTML5</div></li>
                         <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">CSS3</div></li>
+                        <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Javascript</div></li>
                         <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">NBA API</div></li>
                         <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Python</div></li>                    
                     </ul>
